refactor(shared): downgrade codebase to java 8 for compatibility
- set maven compiler target to 1.8 in pom.xml
- replace List.of, Map.of, and Set.of with java 8 equivalents
- refactor java 15+ text blocks to standard string concatenation
- replace java 16+ instanceof pattern matching with traditional casting
- updated full test suite to ensure java 8 runtime compatibility